--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "npm-sass": "^2.3.0"
+    "npm-sass": "^2.3.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1"
   },
   "dependencies": {
     "react": "^16.5.1",
