--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "babel-preset-react": "^6.24.1",
     "npm-sass": "^2.3.0",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "react-waypoint": "^8.0.3",
+    "scroll-snap": "^1.0.6"
   },
   "dependencies": {
     "react": "^16.5.1",
